--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id("io.micronaut.application") version "4.5.0"
-    id("com.gradleup.shadow") version "8.3.6"
     id("io.micronaut.aot") version "4.5.0"
+    id("com.gradleup.shadow") version "8.3.6"
 }
+
 
 version = "0.1"
 group = "com.example"
@@ -23,6 +24,7 @@ dependencies {
     compileOnly("io.micronaut:micronaut-http-client-jdk")
     runtimeOnly("ch.qos.logback:logback-classic")
     testImplementation("io.micronaut:micronaut-http-client-jdk")
+    testImplementation("io.micronaut.aws:micronaut-function-aws-api-proxy")
 }
 
 
@@ -30,23 +32,44 @@ application {
     mainClass = "com.example.Application"
 }
 java {
-    sourceCompatibility = JavaVersion.toVersion("21")
-    targetCompatibility = JavaVersion.toVersion("21")
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
 }
+
 
 
 graalvmNative.toolchainDetection = false
 
+//micronaut {
+//    runtime("http_poja")
+//    testRuntime("junit5")
+//    processing {
+//        incremental(true)
+//        annotations("com.example.*")
+//    }
+//    aot {
+//        // Please review carefully the optimizations enabled below
+//        // Check https://micronaut-projects.github.io/micronaut-aot/latest/guide/ for more details
+//        optimizeServiceLoading = false
+//        convertYamlToJava = false
+//        precomputeOperations = true
+//        cacheEnvironment = true
+//        optimizeClassLoading = true
+//        deduceEnvironment = true
+//        optimizeNetty = true
+//        replaceLogbackXml = true
+//    }
+//}
+
 micronaut {
-    runtime("http_poja")
+    runtime("netty") // <-- ЗДЕСЬ МЕНЯЕШЬ на netty
     testRuntime("junit5")
     processing {
-        incremental(true)
-        annotations("com.example.*")
+        incremental true
+        annotations "com.example.*"
     }
     aot {
-        // Please review carefully the optimizations enabled below
-        // Check https://micronaut-projects.github.io/micronaut-aot/latest/guide/ for more details
         optimizeServiceLoading = false
         convertYamlToJava = false
         precomputeOperations = true
@@ -67,5 +90,6 @@ tasks.named("dockerfileNative") {
             "-Dio.netty.noPreferDirect=true"
     )
 }
+
 
 
