--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 
 version = "0.1"
-group = "com.example"
+group = "zaico"
 
 repositories {
     mavenCentral()
@@ -29,7 +29,7 @@ dependencies {
 
 
 application {
-    mainClass = "com.example.Application"
+    mainClass = "zaico.Application"
 }
 java {
     toolchain {
@@ -46,7 +46,7 @@ graalvmNative.toolchainDetection = false
 //    testRuntime("junit5")
 //    processing {
 //        incremental(true)
-//        annotations("com.example.*")
+//        annotations("zaico.*")
 //    }
 //    aot {
 //        // Please review carefully the optimizations enabled below
@@ -67,7 +67,7 @@ micronaut {
     testRuntime("junit5")
     processing {
         incremental true
-        annotations "com.example.*"
+        annotations "zaico.*"
     }
     aot {
         optimizeServiceLoading = false
