--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -1,5 +1,5 @@
 applicationType: default
-defaultPackage: com.example
+defaultPackage: zaico
 testFramework: junit
 sourceLanguage: java
 buildTool: gradle
