--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 #Fri Apr 04 13:49:50 UTC 2025
 micronaut.application.name=position-service
+
+binance.api-key: ${BINANCE_API_KEY}
+binance.api-secret: ${BINANCE_API_SECRET}
