--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,14 @@ dependencies {
     implementation("io.micronaut.crac:micronaut-crac")
     implementation("io.micronaut.objectstorage:micronaut-object-storage-aws")
     implementation("io.micronaut.serde:micronaut-serde-jackson")
+    implementation('io.github.binance:binance-connector-java:3.4.1')
+    implementation 'io.github.binance:binance-futures-connector-java:3.0.5'
+    implementation("com.fasterxml.jackson.core:jackson-databind")
+
+
     compileOnly("io.micronaut:micronaut-http-client-jdk")
     runtimeOnly("ch.qos.logback:logback-classic")
+
     testImplementation("io.micronaut:micronaut-http-client-jdk")
     testImplementation("io.micronaut.aws:micronaut-function-aws-api-proxy")
 }
